--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/jest": "^29.5.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jest": "^29.6.2",
     "ts-jest": "^29.1.1",
@@ -18,6 +19,7 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17"
   }
 }
