--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.4.0",
     "jsdom": "^22.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
