--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "axios": "^1.4.0",
     "jsdom": "^22.1.0",
     "react": "^18.2.0",
